*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6293 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensionsGSW.framework/French.lproj/GSWLogin.gswc/GSWLogin.html
+++ b/GSWExtensionsGSW.framework/French.lproj/GSWLogin.gswc/GSWLogin.html
@@ -1,4 +1,5 @@
 <GSWEB NAME=Form>
+  <GSWEB NAME=CurrentDate></GSWEB>
   <CENTER>
   <GSWEB NAME=MessageConditional>
 	<B><GSWEB NAME=Message></GSWEB><BR></B>
