--- a/GSWExtensionsGSW.framework/GSWLogin.gswc/GSWLogin.html
+++ b/GSWExtensionsGSW.framework/GSWLogin.gswc/GSWLogin.html
@@ -1,4 +1,5 @@
 <GSWEB NAME=Form>
+  <GSWEB NAME=CurrentDate></GSWEB>
   <CENTER>
   <GSWEB NAME=MessageConditional>
 	<B><GSWEB NAME=Message></GSWEB><BR></B>
