2000-10-04  Manuel Guesdon <mguesdon@orange-concept.com>
        * GSWExtensions.framework/Makefile.preamble: added GDL2 FLAG
        * GSWExtensions.framework/*/*.html: lowercase tags
        * GSWExtensionsGSW.framework/*/*.html: lowercase tags
        * GSWeb.framework/GNUmakefile : added DTDs, modified Files list
        * GSWeb.framework/GSWApplication.m: commented [GSWHTMLParser printsDiagnostics]
                                            changes for GDL2
        * GSWeb.framework/GSWBrowser.h/.m: implementation
        * GSWeb.framework/GSWBundle.m: Parser call modification, handling of .gswi unarchiving
        * GSWeb.framework/GSWComponentContent.m: Logs
        * GSWeb.framework/GSWConfig.h: Added GSWEB_DEFAULT_HTML_PARSER_CLASS_NAME
        * GSWeb.framework/GSWConstants.h/.m: added keys
        * GSWeb.framework/GSWDisplayGroup.h/.m member variables renamed
                                                implementation of some missing parts
        * GSWeb.framework/GSWRequest.m: remove duplicate languages
        * GSWeb.framework/GSWTemplateParser.h/.m: make it base class for different parsers
        * GSWeb.framework/GSWTemplateParserXML.h/.m: XML parser
        * GSWeb.framework/GSWTemplateParserANTLR.h/.m: ANTLR (old) parser
        * GSWeb.framework/GSWUtils.h/.m: added  SBIsValueIsIn()
        * GSWeb.framework/GSWeb.h: added includes for parsers
        * GSWeb.framework/Makefile.postamble: DTDs install
        * GSWeb.framework/Makefile.preamble:  added GDL2 FLAG


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@7703 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/French.lproj/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
@@ -1,26 +1,26 @@
-<HTML>
-<HEAD>
-  <TITLE>Erreur: Page Manquante</TITLE>
-</HEAD>
-<BODY bgcolor=white>
+<html>
+<head>
+  <title>Erreur: Page Manquante</title>
+</head>
+<body bgcolor="white">
 
-<TABLE BORDER=0>
-<TR>
-    <TD ALIGN=CENTER VALIGN=TOP>
-        <GSWEB NAME=ExclamationImage></GSWEB><BR>
-        Ré-entrer<BR>
-        <GSWEB NAME=ReenterHyperlink>
-            <B><GSWEB NAME=ApplicationNameString></GSWEB></B>
-        </GSWEB>
-    </TD>
-    <TD ALIGN=LEFT VALIGN=MIDDLE>
-        <B> Vous etes retourné trop loin.<BR></B>
+<table border="0">
+<tr>
+    <td align="CENTER" Valign="TOP">
+        <gsweb name="ExclamationImage"></gsweb><br>
+        Ré-entrer<br>
+        <gsweb name="ReenterHyperlink">
+            <b><gsweb name="ApplicationNameString"></gsweb></b>
+        </gsweb>
+    </td>
+    <td align="LEFT" Valign="MIDDLE">
+        <b> Vous etes retourné trop loin.<br></b>
         La limite de 
-        <GSWEB NAME=BacktrackingLimitString></GSWEB>
-        a été dépassée.<BR>
-    </TD>
-</TR>
-</TABLE>
+        <gsweb name="BacktrackingLimitString"></gsweb>
+        a été dépassée.<br>
+    </td>
+</tr>
+</table>
 
-</BODY>
-</HTML>
+</body>
+</html>
