--- a/GSWExtensions.framework/French.lproj/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
@@ -1,24 +1,24 @@
-<HTML>
-<HEAD>
-  <TITLE>Erreur: Session Manquante</TITLE>
-</HEAD>
-<BODY bgcolor="white">
+<html>
+<head>
+  <title>Erreur: Session Manquante</title>
+</head>
+<body bgcolor="white">
 
-<TABLE BORDER=0 WIDTH="100%">
-<TR>
-    <TD ALIGN=CENTER VALIGN=TOP>
-        <GSWEB NAME=ExclamationImage></GSWEB><BR>
-        Ré-entrer<BR>
-        <GSWEB NAME=ReenterHyperlink>
-            <B><GSWEB NAME=ApplicationNameString></GSWEB></B>
-        </GSWEB>
-    </TD>
-    <TD ALIGN=LEFT VALIGN=MIDDLE>
-        <B>Votre session a expiré.<B>
-    </TD>
-</TR>
-</TABLE>
+<table border="0" width="100%">
+<tr>
+    <td align="CENTER" Valign="TOP">
+        <gsweb name="ExclamationImage"></gsweb><br>
+        Ré-entrer<br>
+        <gsweb name="ReenterHyperlink">
+            <b><gsweb name="ApplicationNameString"></gsweb></b>
+        </gsweb>
+    </td>
+    <td align="LEFT" Valign="MIDDLE">
+        <b>Votre session a expiré.<b>
+    </td>
+</tr>
+</table>
 
-</BODY>
-</HTML>
+</body>
+</html>
 
