--- a/GSWExtensions.framework/GSWCollapsibleComponentContent.gswc/GSWCollapsibleComponentContent.html
+++ b/GSWExtensions.framework/GSWCollapsibleComponentContent.gswc/GSWCollapsibleComponentContent.html
@@ -1,1 +1,1 @@
-<GSWEB NAME=Link><GSWEB NAME=Image></GSWEB></GSWEB> <GSWEB NAME=Label></GSWEB><GSWEB NAME=Condition><GSWEB NAME=Content></GSWEB></GSWEB>
+<gsweb name="Link"><gsweb name="Image"></gsweb></gsweb> <gsweb name="Label"></gsweb><gsweb name="Condition"><gsweb name="Content"></gsweb></gsweb>
