--- a/GSWExtensions.framework/GSWIFrame.gswc/GSWIFrame.html
+++ b/GSWExtensions.framework/GSWIFrame.gswc/GSWIFrame.html
@@ -1,1 +1,1 @@
-<GSWEB NAME=IFrameContainer><GSWEB NAME=AltContent></GSWEB></GSWEB>
+<gsweb name="IFrameContainer"><gsweb name="AltContent"></gsweb></gsweb>
