--- a/GSWExtensions.framework/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
+++ b/GSWExtensions.framework/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
@@ -1,26 +1,26 @@
-<HTML>
-<HEAD>
-  <TITLE>Missing Page Error</TITLE>
-</HEAD>
-<BODY bgcolor="white">
+<html>
+<head>
+  <title>Missing Page Error</title>
+</head>
+<body bgcolor="white">
 
-<TABLE BORDER=0>
-<TR>
-    <TD ALIGN=CENTER VALIGN=TOP>
-        <GSWEB NAME=ExclamationImage></GSWEB><BR>
-        Re-enter<BR>
-        <GSWEB NAME=ReenterHyperlink>
-            <B><GSWEB NAME=ApplicationNameString></GSWEB></B>
-        </GSWEB>
-    </TD>
-    <TD ALIGN=LEFT VALIGN=MIDDLE>
-        <B> You backtracked too far.<BR></B>
+<table border="0">
+<tr>
+    <td align="CENTER" Valign="TOP">
+        <gsweb name="ExclamationImage"></gsweb><br>
+        Re-enter<br>
+        <gsweb name="ReenterHyperlink">
+            <b><gsweb name="ApplicationNameString"></gsweb></b>
+        </gsweb>
+    </td>
+    <td align="LEFT" Valign="MIDDLE">
+        <b> You backtracked too far.<br></b>
         The application backtracking limit of
-        <GSWEB NAME=BacktrackingLimitString></GSWEB>
-        has been exceeded.<BR>
-    </TD>
-</TR>
-</TABLE>
+        <gsweb name="BacktrackingLimitString"></gsweb>
+        has been exceeded.<br>
+    </td>
+</tr>
+</table>
 
-</BODY>
-</HTML>
+</body>
+</html>
