--- a/GSWExtensions.framework/GSWTable.gswc/GSWTable.html
+++ b/GSWExtensions.framework/GSWTable.gswc/GSWTable.html
@@ -1,9 +1,9 @@
-<GSWEB name=TableContainer>
-    <GSWEB name=RowRepetition>
-    <GSWEB name=TableRow>
-        <GSWEB name=ColRepetition>
-            <GSWEB name=CellContainer><GSWEB name=Content></GSWEB></GSWEB>
-        </GSWEB>
-    </GSWEB>
-    </GSWEB>
-</GSWEB>
+<gsweb name="TableContainer">
+    <gsweb name="RowRepetition">
+    <gsweb name="TableRow">
+        <gsweb name="ColRepetition">
+            <gsweb name="CellContainer"><gsweb name="Content"></gsweb></gsweb>
+        </gsweb>
+    </gsweb>
+    </gsweb>
+</gsweb>
