--- a/GSWExtensions.framework/GSWTableString.gswc/GSWTableString.html
+++ b/GSWExtensions.framework/GSWTableString.gswc/GSWTableString.html
@@ -1,1 +1,1 @@
-<GSWEB name=SomethingDisplayed><GSWEB name=String></GSWEB></GSWEB><GSWEB name=NothingDisplayed>&nbsp</GSWEB>
+<gsweb name="SomethingDisplayed"><gsweb name="String"></gsweb></gsweb><gsweb name="NothingDisplayed">&nbsp</gsweb>
