--- a/GSWExtensionsGSW.framework/French.lproj/GSWLogin.gswc/GSWLogin.html
+++ b/GSWExtensionsGSW.framework/French.lproj/GSWLogin.gswc/GSWLogin.html
@@ -1,30 +1,30 @@
-<GSWEB NAME=Form>
-  <GSWEB NAME=CurrentDate></GSWEB>
-  <CENTER>
-  <GSWEB NAME=MessageConditional>
-	<B><GSWEB NAME=Message></GSWEB><BR></B>
-  </GSWEB>
-  <TABLE BORDER=1>
-	<TR>
-	  <TD>
-		<TABLE BORDER=0>
-		  <TR>
-			<TD ALIGN=RIGHT>Nom utilisateur:</TD>
-			<TD><GSWEB NAME=User></GSWEB></TD>
-           </TR>
-            <TR>
-	           <TD ALIGN=RIGHT>Mot de Passe:</TD>
-	           <TD><GSWEB NAME=Password></GSWEB></TD>
-			</TR>
-			<TR>
-	           <TD COLSPAN=2 ALIGN=CENTER>
-                  <GSWEB NAME=Submit></GSWEB>
-			      <GSWEB NAME=Reset></GSWEB>
-			   </TD>
-            </TR>
-          </TABLE>
-		</TD>
-	  </TR>
-	</TABLE>
-  </CENTER>
-</GSWEB>
+<gsweb name="Form">
+  <gsweb name="CurrentDate"></gsweb>
+  <center>
+  <gsweb name="MessageConditional">
+	<b><gsweb name="Message"></gsweb><br></b>
+  </gsweb>
+  <table border="1">
+	<tr>
+	  <td>
+		<table border="0">
+		  <tr>
+			<td align="RIGHT">Nom utilisateur:</td>
+			<td><gsweb name="User"></gsweb></td>
+           </tr>
+            <tr>
+	           <td align="RIGHT">Mot de Passe:</td>
+	           <td><gsweb name="Password"></gsweb></td>
+			</tr>
+			<tr>
+	           <TD COLSPAN="2" align="CENTER">
+                  <gsweb name="Submit"></gsweb>
+			      <gsweb name="Reset"></gsweb>
+			   </td>
+            </tr>
+          </table>
+		</td>
+	  </tr>
+	</table>
+  </center>
+</gsweb>
