--- a/GSWExtensionsGSW.framework/GSWFileUploadFormComponent.gswc/GSWFileUploadFormComponent.html
+++ b/GSWExtensionsGSW.framework/GSWFileUploadFormComponent.gswc/GSWFileUploadFormComponent.html
@@ -1,8 +1,8 @@
-<GSWEB NAME=Form>
-  <GSWEB NAME=ViewCondition>
-	<GSWEB NAME=FileLink></GSWEB>
-  </GSWEB>
-  <GSWEB NAME=UploadFile></GSWEB><BR>
-  <GSWEB NAME=SubmitButton></GSWEB>
-  <GSWEB NAME=DeleteButton></GSWEB>
-</GSWEB>
+<gsweb name="Form">
+  <gsweb name="ViewCondition">
+	<gsweb name="FileLink"></gsweb>
+  </gsweb>
+  <gsweb name="UploadFile"></gsweb><br>
+  <gsweb name="SubmitButton"></gsweb>
+  <gsweb name="DeleteButton"></gsweb>
+</gsweb>
