--- a/GSWExtensionsGSW.framework/GSWSimpleFormComponent.gswc/GSWSimpleFormComponent.html
+++ b/GSWExtensionsGSW.framework/GSWSimpleFormComponent.gswc/GSWSimpleFormComponent.html
@@ -1,12 +1,12 @@
-<GSWEB NAME=Form>
-  <CENTER>
-  <GSWEB NAME=MessageConditional>
-	<P><B><FONT COLOR=red><GSWEB NAME=ErrorMessage></GSWEB></FONT></B><BR></P><P><BR></P>
-  </GSWEB>
-  </CENTER>
-  <GSWEB NAME=Form>
-	<GSWEB NAME=Content></GSWEB>
-	<GSWEB NAME=Submit></GSWEB>
-	<GSWEB NAME=Reset></GSWEB>
-  </GSWEB>
-</GSWEB>
+<gsweb name="Form">
+  <center>
+  <gsweb name="MessageConditional">
+	<p><b><font color="red"><gsweb name="ErrorMessage"></gsweb></font></b><br></P><p><br></P>
+  </gsweb>
+  </center>
+  <gsweb name="Form">
+	<gsweb name="Content"></gsweb>
+	<gsweb name="Submit"></gsweb>
+	<gsweb name="Reset"></gsweb>
+  </gsweb>
+</gsweb>
