--- a/GSWExtensionsGSW.framework/GSWTabComponent.gswc/GSWTabComponent.html
+++ b/GSWExtensionsGSW.framework/GSWTabComponent.gswc/GSWTabComponent.html
@@ -1,11 +1,11 @@
-<TABLE BORDER=0>
-<TR>
-<TD><GSWEB NAME=TabBarLeftBorder></GSWEB></TD>
-<GSWEB NAME=Repetition>
-<TD><GSWEB NAME=TabLeftBorder></GSWEB></TD>
-<TD><GSWEB NAME=Tab><GSWEB NAME=TabImageCondition><GSWEB NAME=TabImage></GSWEB></GSWEB><GSWEB NAME=TabTextCondition><GSWEB NAME=TabText></GSWEB></GSWEB></GSWEB></TD>
-<TD><GSWEB NAME=TabRightBorder></GSWEB></TD>
-</GSWEB>
-<TD><GSWEB NAME=TabBarLeftBorder></GSWEB></TD>
-</TR>
-</TABLE>
+<table border="0">
+<tr>
+<td><gsweb name="TabBarLeftBorder"></gsweb></td>
+<gsweb name="Repetition">
+<td><gsweb name="TabLeftBorder"></gsweb></td>
+<td><gsweb name="Tab"><gsweb name="TabImageCondition"><gsweb name="TabImage"></gsweb></gsweb><gsweb name="TabTextCondition"><gsweb name="TabText"></gsweb></gsweb></gsweb></td>
+<td><gsweb name="TabRightBorder"></gsweb></td>
+</gsweb>
+<td><gsweb name="TabBarLeftBorder"></gsweb></td>
+</tr>
+</table>
