--- a/GSWExtensionsGSW.framework/GSWValidationFailureComponent.gswc/GSWValidationFailureComponent.html
+++ b/GSWExtensionsGSW.framework/GSWValidationFailureComponent.gswc/GSWValidationFailureComponent.html
@@ -1,7 +1,7 @@
-<GSWEB NAME=ValidationFailureCondition>
-	<FONT COLOR="#FF0000">
-       <GSWEB NAME=ValidationFailureRepetition>
-	     <GSWEB NAME=ValidationFailure></GSWEB><BR>
-	   </GSWEB>
-    </FONT>
-</GSWEB>
+<gsweb name="ValidationFailureCondition">
+	<font color="#FF0000">
+       <gsweb name="ValidationFailureRepetition">
+	     <gsweb name="ValidationFailure"></gsweb><br>
+	   </gsweb>
+    </font>
+</gsweb>
