--- a/GSWExtensions.framework/French.lproj/GSWExceptionPage.gswc/GSWExceptionPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWExceptionPage.gswc/GSWExceptionPage.html
@@ -1,80 +1,80 @@
-<HTML>
-<HEAD>
-  <TITLE>GNUstepWeb Erreurr</TITLE>
-</HEAD>
-<BODY bgcolor=white>
+<html>
+<head>
+  <title>GNUstepWeb Erreur</title>
+</head>
+<body bgcolor="white">
 
-<TABLE BORDER=0>
-<TR>
-<TD ALIGN=center VALIGN=TOP>
-    <GSWEB NAME=ExclamationImage></GSWEB><br>
+<table border="0">
+<tr>
+<td align="center" valign="top">
+    <gsweb name="ExclamationImage"></gsweb><br>
     Ré-entrer<br>
-    <GSWEB NAME=ReenterHyperlink>
-        <B><GSWEB NAME=ApplicationNameString></GSWEB></B>
-    </GSWEB>
-</TD>
-<TD ALIGN=LEFT VALIGN=TOP>
-    <GSWEB NAME=VisibleConditional>
-        <HR>
-        <TABLE BORDER=0>
-            <TR>
-                <TD ALIGN=RIGHT VALIGN=TOP>
-                    <B>Application:</B>
-                </TD>
-                <TD ALIGN=LEFT VALIGN=TOP>
-                    <GSWEB NAME=ApplicationNameString></GSWEB>
-                </TD>
-            </TR>
-            <TR>
-                <TD ALIGN=RIGHT VALIGN=TOP>
-                    <B>Erreurr:</B>
-                </TD>
-                <TD ALIGN=LEFT VALIGN=TOP>
-                    <GSWEB NAME=ExceptionNameString></GSWEB>
-                </TD>
-            </TR>
-            <TR>
-                <TD ALIGN=RIGHT VALIGN=TOP>
-                    <B>Raison:</B>
-                </TD>
-                <TD ALIGN=LEFT VALIGN=TOP>
-                    <GSWEB NAME=ReasonRepetition>
-                        <GSWEB NAME=ReasonString></GSWEB><BR>
-                    </GSWEB>
-                </TD>
-            </TR>
-            <TR>
-                <TD colspan=2 ALIGN=LEFT VALIGN=bottom>
-                    <HR>
-                    <B>Dictionaire des informations utilisateur:</B>
-                </TD>
-            </TR>
-            <GSWEB NAME=HasUserInfoConditional>
-                <GSWEB NAME=UserInfoRowRepetition>
-                <TR>
-                    <TD ALIGN=RIGHT VALIGN=TOP>
-                        <B><GSWEB NAME=UserInfoKeyString></GSWEB>:</B>
-                    </TD>
-                    <TD ALIGN=LEFT VALIGN=TOP>
-                        <GSWEB NAME=UserInfoValueString></GSWEB>
-                    </TD>
-                </TR>
-                </GSWEB>
-            </GSWEB>
-            <GSWEB NAME=NoUserInfoConditional>
-                <TR>
-                <TD ALIGN=RIGHT VALIGN=TOP>
-                </TD>
-                <TD ALIGN=LEFT VALIGN=TOP>
-                <B>L'Exception n'a pas de dictionaire des informations utilisateur</B>
-                </TD>
-                </TR>
-            </GSWEB>
-        </GSWEB>
-        </TABLE>
-</TD>
-</TR>
-</TABLE>
+    <gsweb name="ReenterHyperlink">
+        <b><gsweb name="ApplicationNameString"></gsweb></b>
+    </gsweb>
+</td>
+<td align="left" valign="top">
+    <gsweb name="VisibleConditional">
+        <hr>
+        <table border="0">
+            <tr>
+                <td align="right" valign="top">
+                    <b>Application:</b>
+                </td>
+                <td align="left" valign="top">
+                    <gsweb name="ApplicationNameString"></gsweb>
+                </td>
+            </tr>
+            <tr>
+                <td align="right" valign="top">
+                    <b>Erreur:</b>
+                </td>
+                <td align="left" valign="top">
+                    <gsweb name="ExceptionNameString"></gsweb>
+                </td>
+            </tr>
+            <tr>
+                <td align="right" valign="top">
+                    <b>Raison:</b>
+                </td>
+                <td align="left" valign="top">
+                    <gsweb name="ReasonRepetition">
+                        <gsweb name="ReasonString"></gsweb><br>
+                    </gsweb>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="left" valign="bottom">
+                    <hr>
+                    <b>Dictionaire des informations utilisateur:</b>
+                </td>
+            </tr>
+            <gsweb name="HasUserInfoConditional">
+                <gsweb name="UserInfoRowRepetition">
+                <tr>
+                    <td align="right" valign="top">
+                        <b><gsweb name="UserInfoKeyString"></gsweb>:</b>
+                    </td>
+                    <td align="left" valign="top">
+                        <gsweb name="UserInfoValueString"></gsweb>
+                    </td>
+                </tr>
+                </gsweb>
+            </gsweb>
+            <gsweb name="NoUserInfoConditional">
+                <tr>
+                <td align="right" valign="top">
+                </td>
+                <td align="left" valign="top">
+                <b>L'Exception n'a pas de dictionaire des informations utilisateur</b>
+                </td>
+                </tr>
+            </gsweb>
+        </gsweb>
+        </table>
+</td>
+</tr>
+</table>
 
-</BODY>
-</HTML>
+</body>
+</html>
