--- a/GSWExtensions.framework/GSWStatsPage.gswc/GSWStatsPage.html
+++ b/GSWExtensions.framework/GSWStatsPage.gswc/GSWStatsPage.html
@@ -1,306 +1,288 @@
-<HTML>
-<HEAD><TITLE></TITLE>
-</HEAD>
-<BODY BGCOLOR=#FFFFFF>
+<html>
+<head><title></title>
+</head>
+<body BGcolor="#FFFFFF">
     
-<GSWEB NAME=REFUSED>
-<CENTER>
-<h2><FONT color=#FF0000>This Request Requires A User Login</FONT></h2>
-<BR>
+<gsweb name="REFUSED">
+<center>
+<h2><font color="#FF0000">This Request Requires A User Login</font></h2>
+<br>
 <!-- ****
-<GSWEB name=Form1>
-<TABLE border=1 cellPadding=2 cellSpacing=0 bgcolor="#f6ffff">
-<TABLE BORDER=0 WIDTH=80%>
-    <TR align=CENTER>
-        <TD>
+<gsweb name="Form1">
+<table border="1" cellPadding="2" cellSpacing="0" bgcolor="#f6ffff">
+<table border="0" width="80%">
+    <TR align="CENTER">
+        <td>
         User
-        </TD>
-        <TD>
-        <GSWEB NAME="USERNAME"></GSWEB>
-        </TD>
-        </TR>
-    <TR align=CENTER>
-        <TD>
+        </td>
+        <td>
+        <gsweb name="USERNAME"></gsweb>
+        </td>
+        </tr>
+    <TR align="CENTER">
+        <td>
         Password
-        </TD>
-        <TD>
-        <GSWEB NAME="PASSWORD"></GSWEB>
-        </TD>
-        </TR>
-<TR>
-<GSWEB NAME="SUBMIT"></GSWEB>
-</TR>
-</TABLE>
-</TABLE>
-<BR>
-</GSWEB>
-********** -->
-</CENTER>
-</GSWEB><GSWEB NAME=ALLOWED> 
-
-<GSWEB NAME=Form4><TABLE BORDER=0 WIDTH=100%>
-  <TR>
-    <TD ALIGN=CENTER COLSPAN=2>
-    <H2>Statistics For <FONT color=#FF0000>
-        <GSWEB name=String2></GSWEB>
-        <GSWEB name=Conditional2>
-            #<FONT color=#FF0000>
-            <GSWEB name=String6></GSWEB>
-            </FONT>
-        </GSWEB>
-        </FONT>On Host <FONT color=#FF0000>
-        <GSWEB name=String11></GSWEB>
-        </FONT>
-    </H2>
-    </TD>
-  </TR>
-  <TR>
-    <TD ALIGN=CENTER>
-    <GSWEB NAME="REFRESH"></GSWEB>
-    </TD>
-  </TR>
-</TABLE></GSWEB><HR>
-
-<BR>
-
-<CENTER>
-    <TABLE BORDER=2 CELLPADDING=4 CELLSPACING=2 bgcolor="#d0d0d0">
-    <TR align = CENTER bgcolor="#b0b0b0">
-        <TD COLSPAN=6><FONT SIZE=+1><B>Application Statistics</B></FONT>
-    </TD>
-    </TR>
-        <TR>
-            <TD> &nbsp </TD>
-            <TD ALIGN=CENTER><FONT SIZE=-1>Transactions</FONT></TD>
-            <TD ALIGN=CENTER><FONT SIZE=-1>Average Transaction<BR>Time</FONT></TD>
-            <TD ALIGN=CENTER><FONT SIZE=-1>Average Idle<BR>Time</FONT></TD>
-            <TD ALIGN=CENTER><FONT SIZE=-1>Moving Average*<BR>Transaction Time</FONT></TD>
-            <TD ALIGN=CENTER><FONT SIZE=-1>Moving Average*<BR>Idle Time</FONT></TD>
-        </TR>
-        <TR>
-            <TD>Overall</TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=Transactions></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=AvgTransactionTime></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=AvgIdleTime></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=MovingAvgTransactionTime></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=MovingAvgIdleTime></GSWEB></FONT></TD>
-        </TR>
-        <TR>
-            <TD>Component Actions</TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=ComponentActionTransactions></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=AvgComponentActionTransactions></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT size=-1>NA</FONT></TD>
-            <TD ALIGN=CENTER> &nbsp </TD>
-            <TD ALIGN=CENTER><FONT size=-1>NA</FONT></TD>
-        </TR>
-        <TR>
-            <TD>Direct Actions</TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=DirectActionTransactions></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB name=AvgDirectActionTransactions></GSWEB></FONT></TD>
-            <TD ALIGN=CENTER><FONT size=-1>NA</FONT></TD>
-            <TD ALIGN=CENTER> &nbsp </TD>
-            <TD ALIGN=CENTER><FONT size=-1>NA</FONT></TD>
-        </TR>
-        <TR>
-            <TD>Started at</TD>
-            <TD COLSPAN=5>
-                <FONT color=#0000FF><GSWEB name=String21></GSWEB></FONT>
-            </TD>
-        </TR>
-        <TR>
-            <TD>Running time</TD>
-            <TD COLSPAN=5>
-                <FONT color=#0000FF><GSWEB name=RunningTime></GSWEB></FONT>
-            </TD>
-        </TR>
-
-    </TABLE>
-    <FONT SIZE=-1>
-        * The sample size for Moving Averages is <FONT color=#0000FF><GSWEB name=MovingAvgSampleSize></GSWEB></FONT> transactions.
-    </FONT>
-</CENTER>
-
-<HR>
-<CENTER>
-    <TABLE BORDER=2 CELLPADDING=4 CELLSPACING=2 bgcolor="#d0d0d0">
-    <TR align=CENTER bgcolor="#b0b0b0">
-        <TD COLSPAN=2><FONT SIZE=+1><B>Sessions Statistics</B></FONT></TD>
-    </TR>
-        <GSWEB name=SessionsRepetition>
-            <TR>
-                <TD>
-                    <GSWEB name=SessionsKeyCell>
-                    </GSWEB>
-                </TD>
-                <TD>
-                    <FONT color=#0000FF><GSWEB name=SessionsValueCell>
-                    </GSWEB></FONT>
-                </TD>
-            </TR>
-        </GSWEB>
-<GSWEB NAME="ISMAXSESSIONS">
-    <TR>
-        <TD COLSPAN=2>Peak Concurrent Sessions at<BR><FONT color=#0000FF><GSWEB NAME="MaxSessions"></GSWEB></FONT>
-    </TD>
-    </TR>
-</GSWEB>
-</TABLE>
-</CENTER>
-<BR>
-<CENTER>
-<TABLE BORDER=0 WIDTH="100%"> <!-- spacer table - invisible -->
-<TR><TD ALIGN=CENTER>
-    <TABLE BORDER=2 CELLPADDING=4 CELLSPACING=2 bgcolor="#d0d0d0">
-    <TR align=CENTER bgcolor="#b0b0b0">
-        <TD COLSPAN=2><B>Memory Usage (bytes)</B>
-    </TD>
-    </TR>
-        <GSWEB name=MemoryRepetition>
-            <TR>
-                <TD>
-                    <GSWEB name=MemoryKeyCell></GSWEB>
-                </TD>
-                <TD ALIGN="RIGHT">
-                    <FONT color=#0000FF><GSWEB name=MemoryValueCell></GSWEB></FONT>
-                </TD>
-            </TR>
-        </GSWEB>
-    </TABLE>
-</TD><TD ALIGN=CENTER>
-    <TABLE BORDER=2 CELLPADDING=4 CELLSPACING=2 bgcolor="#d0d0d0">
-    <TR align = CENTER bgcolor="#b0b0b0">
-        <TD COLSPAN=2><B>Avg. Memory Usage Per Session (bytes)</B>
-    </TD>
-    </TR>
-        <GSWEB name=SessionMemoryRepetition>
-            <TR>
-                <TD>
-                    <GSWEB name=SessionMemoryKeyCell>
-                    </GSWEB>
-                </TD>
-                <TD ALIGN="RIGHT">
-                    <FONT color=#0000FF><GSWEB name=SessionMemoryValueCell>
-                    </GSWEB></FONT>
-                </TD>
-            </TR>
-        </GSWEB>
-    </TABLE>
-</TD></TR></TABLE>
-</CENTER>
-
-<BR>
-
-<GSWEB NAME=ISLASTUSER>
-Response Descriptions For Last User :
-<BR>
-<CENTER>
-<table border=2 cellpadding=4 cellspacing=2 bgcolor="#d0d0d0" WIDTH="80%">
-    <GSWEB name=SessionStatsRepetition>
-        <TR>
-            <TD>
-               <FONT color=#0000FF><GSWEB name=SessionStatsField>
-                </GSWEB></FONT>
-            </TD>
-        </TR>
-    </GSWEB>
+        </td>
+        <td>
+        <gsweb name="PASSWORD"></gsweb>
+        </td>
+        </tr>
+<tr>
+<gsweb name="SUBMIT"></gsweb>
+</tr>
 </table>
-</CENTER>
-</GSWEB><HR>
+</table>
+<br>
+</gsweb>
+********** -->
+</center>
+</gsweb><gsweb name="ALLOWED"> 
 
-<CENTER>
-<TABLE border=2 cellpadding=4 cellspacing=2 width="80%" bgcolor="#d0d0d0">
-  <TR><TD COLSPAN=5 ALIGN=CENTER BGCOLOR="#b0b0b0">
-   <FONT SIZE=+1><B> Component Action Statistics </B></FONT>
-  </TD></TR>
-    <TR align=CENTER bgcolor="#d6d8df">
-        <TD WIDTH = "20%">
-        Name
-        </TD>
-        <TD WIDTH = "50%">Served
-        </TD>
-        <TD WIDTH = "10%">
-        Min
-        </TD>
-        <TD WIDTH = "10%">
-        Avg
-        </TD>
-        <TD WIDTH = "10%">
-        Max
-        </TD>
-    </TR>
-<GSWEB NAME=PagesRepetition>
-    <TR>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=PageName></GSWEB></FONT></TD>
-        <TD align=left><GSWEB NAME="PageCountBar"></GSWEB></TD>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=PageMin></GSWEB></FONT></TD>
-        <TD ALIGN=CENTER><FONT color=#0000FF><B><GSWEB NAME=PageAvg></GSWEB></B></FONT></TD>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=PageMax></GSWEB></FONT></TD>
-    </TR>
-</GSWEB>
-</TABLE>
-</CENTER>
+<gsweb name="Form4"><table border="0" width="100%">
+  <tr>
+    <td align="CENTER" COLSPAN="2">
+    <h2>Statistics For <font color="#FF0000">
+        <gsweb name="String2"></gsweb>
+        <gsweb name="Conditional2">
+            #<font color="#FF0000">
+            <gsweb name="String6"></gsweb>
+            </font>
+        </gsweb>
+        </font>On Host <font color="#FF0000">
+        <gsweb name="String11"></gsweb>
+        </font>
+    </h2>
+    </td>
+  </tr>
+  <tr>
+    <td align="CENTER">
+    <gsweb name="REFRESH"></gsweb>
+    </td>
+  </tr>
+</table></gsweb><hr>
 
-<HR>
+<br>
 
-<CENTER>
-<TABLE border=2 cellpadding=4 cellspacing=2 width="80%" bgcolor="#d0d0d0">
-  <TR><TD COLSPAN=5 ALIGN=CENTER BGCOLOR="#b0b0b0">
-   <FONT SIZE=+1><B> Direct Action Statistics </B></FONT>
-  </TD></TR>
-    <TR align=CENTER bgcolor="#d6d8df">
-        <TD WIDTH="20%">Name</TD>
-        <TD WIDTH="50%">Served</TD>
-        <TD WIDTH="10%">Min</TD>
-        <TD WIDTH="10%">Avg</TD>
-        <TD WIDTH="10%">Max</TD>
-    </TR>
-    <GSWEB NAME=ActionsRepetition>
-    <TR>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=ActionName></GSWEB></FONT></TD>
-        <TD align=left><GSWEB NAME="ActionBar"></GSWEB></TD>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=ActionMin></GSWEB></FONT></TD>
-        <TD ALIGN=CENTER><FONT color=#0000FF><B><GSWEB NAME=ActionAvg></GSWEB></B></FONT></TD>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=ActionMax></GSWEB></FONT></TD>
-    </TR>
-    </GSWEB>
-</TABLE>
-</CENTER>
+<center>
+    <table border="2" CELLPADDING="4" CELLSPACING="2" bgcolor="#d0d0d0">
+    <TR align="CENTER" bgcolor="#b0b0b0">
+        <TD COLSPAN="6"><font SIZE="+1"><b>Application Statistics</b></font>
+    </td>
+    </tr>
+        <tr>
+            <td> &nbsp </td>
+            <td align="CENTER"><font SIZE="-1">Transactions</font></td>
+            <td align="CENTER"><font SIZE="-1">Average Transaction<br>Time</font></td>
+            <td align="CENTER"><font SIZE="-1">Average Idle<br>Time</font></td>
+            <td align="CENTER"><font SIZE="-1">Moving Average*<br>Transaction Time</font></td>
+            <td align="CENTER"><font SIZE="-1">Moving Average*<br>Idle Time</font></td>
+        </tr>
+        <tr>
+            <td>Overall</td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="Transactions"></gsweb></font></td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="AvgTransactionTime"></gsweb></font></td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="AvgIdleTime"></gsweb></font></td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="MovingAvgTransactionTime"></gsweb></font></td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="MovingAvgIdleTime"></gsweb></font></td>
+        </tr>
+        <tr>
+            <td>Component Actions</td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="ComponentActionTransactions"></gsweb></font></td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="AvgComponentActionTransactions"></gsweb></font></td>
+            <td align="CENTER"><font size="-1">NA</font></td>
+            <td align="CENTER"> &nbsp </td>
+            <td align="CENTER"><font size="-1">NA</font></td>
+        </tr>
+        <tr>
+            <td>Direct Actions</td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="DirectActionTransactions"></gsweb></font></td>
+            <td align="CENTER"><font color="#0000FF"><gsweb name="AvgDirectActionTransactions"></gsweb></font></td>
+            <td align="CENTER"><font size="-1">NA</font></td>
+            <td align="CENTER"> &nbsp </td>
+            <td align="CENTER"><font size="-1">NA</font></td>
+        </tr>
+        <tr>
+            <td>Started at</td>
+            <TD COLSPAN="5">
+                <font color="#0000FF"><gsweb name="String21"></gsweb></font>
+            </td>
+        </tr>
+        <tr>
+            <td>Running time</td>
+            <TD COLSPAN="5">
+                <font color="#0000FF"><gsweb name="RunningTime"></gsweb></font>
+            </td>
+        </tr>
 
-<HR>
+    </table>
+    <font SIZE="-1">
+        * The sample size for Moving Averages is <font color="#0000FF"><gsweb name="MovingAvgSampleSize"></gsweb></font> transactions.
+    </font>
+</center>
 
-<CENTER>
-<TABLE border=2 cellPadding=4 cellspacing=2 width="80%" bgcolor="#d0d0d0">
-  <TR><TD COLSPAN=3 ALIGN=CENTER BGCOLOR="#b0b0b0">
-   <FONT SIZE=+1><B>Detailed Statistics</B></FONT>
-  </TD></TR>
-    <TR align=CENTER bgcolor="#d6d8df">
-        <TD WIDTH="40%">
-        Response Description
-        </TD>
-        <TD WIDTH="50%">Percent Of Total
-        </TD>
-        <TD WIDTH="10%">
-        Served
-        </TD>
-    </TR>
-<GSWEB NAME=DetailsRepetition>
-    <TR>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=DetailName></GSWEB></FONT></TD>
-        <TD align=left><GSWEB NAME="BAR_DETAILS"></GSWEB></TD>
-        <TD ALIGN=CENTER><FONT color=#0000FF><GSWEB NAME=DetailCount></GSWEB></FONT></TD>
-    </TR>
-</GSWEB>
-</TABLE>
-<BR>
-<GSWEB NAME=ISLOGPATH>
-<HR>
-<BR>
-Statistics Details Saved In Common Log Format In File <FONT color=#0000FF><GSWEB NAME=LOGPATH></GSWEB></FONT></GSWEB>
+<hr>
+<center>
+    <table border="2" CELLPADDING="4" CELLSPACING="2" bgcolor="#d0d0d0">
+    <TR align="CENTER" bgcolor="#b0b0b0">
+        <TD COLSPAN="2"><font SIZE="+1"><b>Sessions Statistics</b></font></td>
+    </tr>
+        <gsweb name="SessionsRepetition">
+            <tr>
+                <td>
+                    <gsweb name="SessionsKeyCell"></gsweb>
+                </td>
+                <td>
+                    <font color="#0000FF"><gsweb name="SessionsValueCell"></gsweb></font>
+                </td>
+            </tr>
+        </gsweb>
+<gsweb name="ISMAXSESSIONS">
+    <tr>
+        <TD COLSPAN="2">Peak Concurrent Sessions at<br><font color="#0000FF"><gsweb name="MaxSessions"></gsweb></font>
+    </td>
+    </tr>
+</gsweb>
+</table>
+</center>
+<br>
+<center>
+<table border=0 width="100%"> <!-- spacer table - invisible -->
+<tr><td align="CENTER">
+    <table border="2" CELLPADDING="4" CELLSPACING="2" bgcolor="#d0d0d0">
+    <TR align="CENTER" bgcolor="#b0b0b0">
+        <TD COLSPAN="2"><b>Memory Usage (bytes)</b>
+    </td>
+    </tr>
+        <gsweb name="MemoryRepetition">
+            <tr>
+                <td>
+                    <gsweb name="MemoryKeyCell"></gsweb>
+                </td>
+                <td align="RIGHT">
+                    <font color="#0000FF"><gsweb name="MemoryValueCell"></gsweb></font>
+                </td>
+            </tr>
+        </gsweb>
+    </table>
+</td><td align="CENTER">
+    <table border="2" CELLPADDING="4" CELLSPACING="2" bgcolor="#d0d0d0">
+    <TR align="CENTER" bgcolor="#b0b0b0">
+        <TD COLSPAN="2"><b>Avg. Memory Usage Per Session (bytes)</b>
+    </td>
+    </tr>
+        <gsweb name="SessionMemoryRepetition">
+            <tr>
+                <td>
+                    <gsweb name="SessionMemoryKeyCell">
+                    </gsweb>
+                </td>
+                <td align="RIGHT">
+                    <font color="#0000FF"><gsweb name="SessionMemoryValueCell"></gsweb></font>
+                </td>
+            </tr>
+        </gsweb>
+    </table>
+</td></tr></table>
+</center>
 
-<HR>
-<BR>
-<A HREF="http://www.sbuilders.com"><GSWEB name=PoweredByImage></GSWEB></A>
-</CENTER>
-</GSWEB>
-</BODY>
-</HTML>
+<br>
+
+<gsweb name="ISLASTUSER">
+Response Descriptions For Last User :
+<br>
+<center>
+<table border="2" cellpadding="4" cellspacing="2" bgcolor="#d0d0d0" width="80%">
+    <gsweb name="SessionStatsRepetition">
+        <tr>
+            <td>
+               <font color="#0000FF"><gsweb name="SessionStatsField"></gsweb></font>
+            </td>
+        </tr>
+    </gsweb>
+</table>
+</center>
+</gsweb><hr>
+
+<center>
+<table border="2" cellpadding="4" cellspacing="2" width="80%" bgcolor="#d0d0d0">
+  <tr><TD COLSPAN="5" align="CENTER" BGcolor="#b0b0b0">
+   <font SIZE="+1"><b> Component Action Statistics </b></font>
+  </td></tr>
+    <TR align="CENTER" bgcolor="#d6d8df">
+        <TD WIDTH = "20%">Name</td>
+        <TD WIDTH = "50%">Served</td>
+        <TD WIDTH = "10%">Min</td>
+        <TD WIDTH = "10%">Avg</td>
+        <TD WIDTH = "10%">Max</td>
+    </tr>
+<gsweb name="PagesRepetition">
+    <tr>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="PageName"></gsweb></font></td>
+        <td align=left><gsweb name="PageCountBar"></gsweb></td>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="PageMin"></gsweb></font></td>
+        <td align="CENTER"><font color="#0000FF"><b><gsweb name="PageAvg"></gsweb></b></font></td>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="PageMax"></gsweb></font></td>
+    </tr>
+</gsweb>
+</table>
+</center>
+
+<hr>
+
+<center>
+<table border="2" cellpadding="4" cellspacing="2" width="80%" bgcolor="#d0d0d0">
+  <tr><TD COLSPAN="5" align="CENTER" BGcolor="#b0b0b0">
+   <font SIZE="+1"><b> Direct Action Statistics </b></font>
+  </td></tr>
+    <TR align="CENTER" bgcolor="#d6d8df">
+        <TD width="20%">Name</td>
+        <TD width="50%">Served</td>
+        <TD width="10%">Min</td>
+        <TD width="10%">Avg</td>
+        <TD width="10%">Max</td>
+    </tr>
+    <gsweb name="ActionsRepetition">
+    <tr>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="ActionName"></gsweb></font></td>
+        <td align=left><gsweb name="ActionBar"></gsweb></td>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="ActionMin"></gsweb></font></td>
+        <td align="CENTER"><font color="#0000FF"><b><gsweb name="ActionAvg"></gsweb></b></font></td>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="ActionMax"></gsweb></font></td>
+    </tr>
+    </gsweb>
+</table>
+</center>
+
+<hr>
+
+<center>
+<table border="2" cellPadding="4" cellspacing="2" width="80%" bgcolor="#d0d0d0">
+  <tr><TD COLSPAN="3" align="CENTER" BGcolor="#b0b0b0">
+   <font SIZE="+1"><b>Detailed Statistics</b></font>
+  </td></tr>
+    <TR align="CENTER" bgcolor="#d6d8df">
+        <TD width="40%">Response Description</td>
+        <TD width="50%">Percent Of Total</td>
+        <TD width="10%">Served</td>
+    </tr>
+<gsweb name="DetailsRepetition">
+    <tr>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="DetailName"></gsweb></font></td>
+        <td align=left><gsweb name="BAR_DETAILS"></gsweb></td>
+        <td align="CENTER"><font color="#0000FF"><gsweb name="DetailCount"></gsweb></font></td>
+    </tr>
+</gsweb>
+</table>
+<br>
+<gsweb name="ISLOGPATH">
+<hr>
+<br>
+Statistics Details Saved In Common Log Format In File <font color="#0000FF"><gsweb name="LOGPATH"></gsweb></font></gsweb>
+
+<hr>
+<br>
+<A HREF="http://www.gnustepweb.org"><gsweb name="PoweredByImage"></gsweb></A>
+</center>
+</gsweb>
+</body>
+</html>
