--- a/GSWExtensions.framework/French.lproj/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
@@ -8,16 +8,16 @@
 <tr>
     <td align="CENTER" Valign="TOP">
         <gsweb name="ExclamationImage"></gsweb><br>
-        Ré-entrer<br>
+        R&eacute;-entrer<br>
         <gsweb name="ReenterHyperlink">
             <b><gsweb name="ApplicationNameString"></gsweb></b>
         </gsweb>
     </td>
     <td align="LEFT" Valign="MIDDLE">
-        <b> Vous etes retourné trop loin.<br></b>
+        <b> Vous etes retourn&eacute; trop loin.<br></b>
         La limite de 
         <gsweb name="BacktrackingLimitString"></gsweb>
-        a été dépassée.<br>
+        a &eacute;t&eacute; d&eacute;pass&eacute;e.<br>
     </td>
 </tr>
 </table>
