--- a/GSWExtensions.framework/French.lproj/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
@@ -8,13 +8,13 @@
 <tr>
     <td align="CENTER" Valign="TOP">
         <gsweb name="ExclamationImage"></gsweb><br>
-        Ré-entrer<br>
+        R&eacute;-entrer<br>
         <gsweb name="ReenterHyperlink">
             <b><gsweb name="ApplicationNameString"></gsweb></b>
         </gsweb>
     </td>
     <td align="LEFT" Valign="MIDDLE">
-        <b>Votre session a expiré.<b>
+        <b>Votre session a expir&eacute;.</b>
     </td>
 </tr>
 </table>
