--- a/GSWExtensions.framework/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
+++ b/GSWExtensions.framework/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
@@ -14,7 +14,7 @@
         </gsweb>
     </td>
     <td align="LEFT" Valign="MIDDLE">
-        <b>Your session has timed out.<b>
+        <b>Your session has timed out.</b>
     </td>
 </tr>
 </table>
