--- a/GSWExtensions.framework/French.lproj/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Erreur de création de session</title>
+  <title>Erreur de cr&eacute;ation de session</title>
 </head>
 <body BGcolor="white">
 
@@ -8,13 +8,13 @@
 <tr>
     <td align="CENTER" Valign="TOP">
         <gsweb name="ExclamationImage"></gsweb><br>
-        Ré-entrer<br>
+        R&eacute;-entrer<br>
         <gsweb name="ReenterHyperlink">
             <b><gsweb name="ApplicationNameString"></gsweb></b>
         </gsweb>
     </td>
     <td align="LEFT" Valign="MIDDLE">
-        <b>Votre session n'a pu etre crée.<b>
+        <b>Votre session n'a pu etre cr&eacute;e.<b>
     </td>
 </tr>
 </table>
